Sun Oct  2 21:37:24 2011  fox

     143* ctw.c: Add support for 1936/1937 box/unbox drawing.

Mon Sep 26 23:18:40 2011  fox

     142* term.c: Put logs into /tmp/$USER dir.

Tue Sep 13 22:13:12 2011  fox

     141* ctw.c: Allow hilite/select of a single space.

Sat Aug 27 15:24:26 2011  fox

     140* ctw.c: Optimise DRAW_SET_FOREGROUND and DRAW_SET_BACKGROUND.

Fri Aug 26 22:18:50 2011  fox

     139* ctw.c, mkseq.sh, term.c: Add CTW_PID env var. Add ESC[1935m to
          dump a status file so we can read the widnow size and font info
	  without playing with stdin of an app.

Tue Aug 23 21:15:02 2011  fox

     138* ctw.c: Continuing fix for dangling esc sequences.

Mon Aug 22 20:26:05 2011  fox

     137* ctw.c: Fix problem with continued escape sequences with
          text fields.

     136* ctw.c: Avoid core dump when we cannot find a font.

Wed Aug 10 18:15:55 2011  fox

     135* ctw.c: Dont core dump when drawing graphical label and no font
          specified.

     134* term.c: Add CTW_TERM=1 to the environment so children know
          we are running inside fcterm.

Mon Aug  1 21:15:53 2011  fox

     133* ctw.c: Display NUL bytes however.

     132* term.c: Dont interpret NUL special when not using ptysrv.

Mon Jul 25 20:02:11 2011  fox

     131* ctw.c: Fix initial 'e' vs 'E'. Add 'fatal' to the mix.

Sun Jul 24 16:52:47 2011  fox

     130* ctw.c: Add support for matching error/warning on a line.

Wed Jul 20 21:32:28 2011  fox

     129* term.c: Add dynamic redisplay of the minimap.

     128* ctw.c: Make sure we record the fast-scrolled history lines.

Tue Jul 19 22:46:40 2011  fox

     127* ctw.c: Add assertion detection of lcache overflow.

Tue May  3 21:32:06 2011  fox

     126* ctw.c: Make clipboard pasting an 'OR' operation and not an 'AND' one
          to avoid multiple pastes from rdesktop.

Thu Mar 24 09:17:47 2011  fox

     125* build.h: 129

     124* Add Alt-[ and Alt-] keystrokes.

Wed Feb  2 07:27:05 2011  fox
