@@ -1,6 +1,6 @@
 f3df4332 size=66      mtime=1091540434 ./.gdbinit
-00000000 size=4096    mtime=1315950106 ./.git
-3305acdc size=12783   mtime=1315948400 ./Changes
+00000000 size=4096    mtime=1317588091 ./.git
+eb6f937d size=12957   mtime=1317587853 ./Changes
 4cd60854 size=25873   mtime=1221388805 ./README
 2821fbbd size=2816    mtime=1267906051 ./README.2010
 992cfa7b size=752     mtime=1221388987 ./README.fcterm
@@ -10,16 +10,16 @@ c3f39024 size=12403   mtime=958296553 ./Xdefaults
 11420258 size=357931  mtime=1169593899 ./all-escapes.txt
 0b8a1365 size=256     mtime=798888793 ./colors.def
 8612e1f2 size=104     mtime=1266613484 ./colors.sh
-d28e90dd size=245347  mtime=1315948391 ./ctw.c
+9c16c77b size=246074  mtime=1317587958 ./ctw.c
 40697125 size=1007    mtime=794877761 ./ctw.sh
 86ae103c size=231     mtime=1312231261 ./fccat
 cc143aa6 size=2480    mtime=887227412 ./fcterm.bitmap
 11aab0e9 size=63315   mtime=1315948511 ./fcterm.c
 eee5bd46 size=3949    mtime=1287247446 ./fcterm.xpm
 aea56fd6 size=27652   mtime=1220482375 ./fmcterm.c
-0a66c21b size=162     mtime=1315948392 ./include/build.h
+8aa856ea size=162     mtime=1317587844 ./include/build.h
 5f5d5892 size=432     mtime=1267915971 ./include/code.h
-9642608f size=18951   mtime=1266528193 ./include/ctw.h
+67b963a2 size=18974   mtime=1317587715 ./include/ctw.h
 50d7d9be size=9407    mtime=1314454940 ./include/ctwP.h
 94ce2e6d size=5538    mtime=1226785680 ./include/fcterm.h
 92720a51 size=14389   mtime=1235914278 ./include/machine.h
@@ -33,7 +33,7 @@ fd5b5af3 size=1459    mtime=1220482384 ./include/motif.h
 67676b98 size=26      mtime=1220482384 ./include/patchlevel.h
 80175cf8 size=3494    mtime=1220482384 ./include/scrbar.h
 99fb482f size=1230    mtime=1220482384 ./include/scrbarP.h
-f93d7169 size=7526    mtime=1314393576 ./include/sequence.h
+b7ae05a7 size=7631    mtime=1317587854 ./include/sequence.h
 1660dfdf size=21334   mtime=784733258 ./junk/Scrollbar.c
 bfe0fd0a size=4311    mtime=784733258 ./junk/Scrollbar.h
 8857d143 size=3123    mtime=784733258 ./junk/ScrollbarP.h
@@ -49,7 +49,7 @@ f0253d81 size=533     mtime=1310851465 ./machines/linux-x86_32.sh
 66acd3ff size=3210    mtime=1314132298 ./makefile
 3a97a655 size=71255   mtime=794877763 ./misc/aixterm
 4902012e size=403     mtime=1267468714 ./mkcode.sh
-ee64133e size=6512    mtime=1314393500 ./mkseq.sh
+029b06a2 size=6601    mtime=1317587774 ./mkseq.sh
 ce4b58e5 size=4386    mtime=1220482375 ./motif.c
 58ba9418 size=10464   mtime=1220482375 ./pty.c
 66725d33 size=35857   mtime=1267564200 ./ptysrv.c
@@ -70,7 +70,7 @@ b1197941 size=162     mtime=1267481650 ./samples/graphs
 623fd7c0 size=2066    mtime=1267574421 ./samples/smaps.pl
 0d37e119 size=23367   mtime=1227137032 ./scrbar.c
 9b5dde01 size=336     mtime=1220482376 ./t.c
-a32a030e size=64097   mtime=1314393317 ./term.c
+52a1bc6a size=64099   mtime=1317075518 ./term.c
 d5534b35 size=1945    mtime=1233095977 ./xft.c
 42f10135 size=431     mtime=863120235 ./xpm/darrow1.xpm
 99c6cc3a size=418     mtime=863120441 ./xpm/darrow2.xpm
