@@ -1,4 +1,8 @@
 "\r\n"
+"^N x ^O -- switch char set / line drawing\r\n"
+"   x == 0x01    Mid-char vertical line\r\n"
+"\r\n"
+"Escape sequences:\r\n"
 "   ESC ESC x  Print character x literally.\r\n"
 "   ESC 7	Save cursor position\r\n"
 "   ESC 8	Restore cursor position\r\n"
@@ -92,7 +96,7 @@
 "   ESC [1932 ; name ; m                  Set font   \r\n"
 "   ESC [1933 ; x; y; str; m              Draw image string  		\r\n"
 "   ESC [1934 m                           Query winsize in pixels (wxh<Enter>)\r\n"
-"   ESC [1935 m                           Dump internal status to a /tmp/fcterm/fcterm.1879\r\n"
+"   ESC [1935 m                           Dump internal status to a /tmp/fcterm/fcterm.1867\r\n"
 "   ESC [1936 m    Box each character drawn.\r\n"
 "   ESC [1937 m    Unox each character drawn.\r\n"
 "   ESC [n;m r	Set scrolling region to lines n..m.\r\n"
